# agimus_controller

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  croco_hpp.py  datas.npy  dependencies.repos  flake.nix  package.xml  problem.py  script.py  setup.py
.github/workflows/: agimus_controller.yml  dependencies.repos  dependencies.rosinstall  nix.yml  ros1-ci.yml
agimus_controller/: croco_hpp.py  default.nix  hpp_interface.py  main.py  main_hpp_mpc.py  main_hpp_panda_mpc.py  main_mpc.py  main_optim_traj.py  mpc.py  mpc_search.py  ocp.py  ocp_croco_hpp.py  package.xml  plots.py  problem.py  scenes.py  script.py  setup.py  trajectory_buffer.py  trajectory_point.py  wrapper_meshcat.py  wrapper_panda.py
agimus_controller/agimus_controller/: mpc.py  mpc_data.py  mpc_output.py  mpc_search.py  ocp_base.py  ocp_base_croco.py  ocp_factory.py  ocp_param_base.py  trajectory.py  warm_start_base.py  warm_start_factory.py  warm_start_reference.py  warm_start_shift_previous_solution.py
agimus_controller/agimus_controller/factory/: ocp.py  robot_model.py
agimus_controller/agimus_controller/hpp_panda/: scenes.py
agimus_controller/agimus_controller/ocp/: ocp_croco_goal_reaching.py  ocp_croco_joint_state.py  ocp_exp3.py
agimus_controller/agimus_controller/ocps/: ocp.py  ocp_croco_hpp.py
agimus_controller/agimus_controller/robot_model/: panda_model.py
agimus_controller/agimus_controller/robot_model_factory/: obstacle_params_parser.py  robot_model_factory.py
agimus_controller/hpp_panda/: hpp_interface.py  hpp_interface_panda.py  planner.py  scenes.py  wrapper_panda.py
agimus_controller/main/: main_hpp_mpc.py  main_hpp_panda_mpc.py  main_hpp_panda_mpc_buffer.py  main_mpc.py  main_optim_traj.py  servers.py
agimus_controller/main/panda/: main_hpp_mpc.py  main_hpp_mpc_buffer.py  main_meshcat_display.py  main_mpc.py  main_optim_traj.py  main_reaching_goal.py  main_scenes.py
agimus_controller/main/ur3/: main_hpp_mpc.py
agimus_controller/main/ur5/: main_hpp_mpc.py
agimus_controller/ocps/: ocp_croco_hpp.py  ocp_pose_ref.py  parameters.py
agimus_controller/resources/: ball.urdf  panda_env.yaml  wall.urdf
agimus_controller/robot_description/srdf/: demo.srdf
agimus_controller/robot_description/urdf/obstacles/: ball.urdf
agimus_controller/robot_model/: obstacle_params_parser.py  panda_model.py  robot_model.py  ur5_model.py  wrapper_panda.py
agimus_controller/tests/: test_buffer.py  test_mpc_data.py  test_mpc_unicycle.py  test_ocp_base.py  test_ocp_croco_base.py  test_ocp_croco_goal_reaching.py  test_ocp_croco_joint_state.py  test_ocp_param_base.py  test_robot_models.py  test_warm_start.py  test_warm_start_base.py  test_warm_start_reference.py  test_warm_start_shift_previous_reference.py
agimus_controller/tests/resources/: agimus_controller_params.yaml
agimus_controller/tests/ressources/: simple_ocp_croco_results.npy  simple_ocp_croco_results.pkl
agimus_controller/theos-work/: croco_hpp.py  mpc.py  ocp_analyzer.py  ocp_pick_and_place2_v1.py  script.py
agimus_controller/theos_work/: croco_hpp.py  main.py  mpc.py  ocp_analyzer.py  ocp_pick_and_place2_v1.py  run.py  script.py
agimus_controller/utils/: build_models.py  ocp_analyzer.py  path_finder.py  pin_utils.py  plots.py  process_handler.py  record_bag.sh  ros_np_multiarray.py  wrapper_meshcat.py
agimus_controller/visualization/: plots.py  wrapper_meshcat.py
agimus_controller_examples/: debug_ocp.py  default.nix  evaluate_model_sensibility.py  read_from_bag_trajectory.py  setup.py
agimus_controller_examples/agimus_controller_examples/: hpp_interface.py  mpc_search.py  setup.py
agimus_controller_examples/agimus_controller_examples/main/model_sensibility/: evaluate_model_sensibility.py  (+1 more)
agimus_controller_examples/agimus_controller_examples/ocp/: ocp_exp3_main.py
agimus_controller_examples/agimus_controller_examples/resources/: panda_env.yaml
agimus_controller_examples/agimus_controller_examples/utils/: ocp_analyzer.py
agimus_controller_ros/: agimus_controller.py  controller_base.py  default.nix  hpp_agimus_controller.py  hpp_subscriber.py  package.xml  parameters.py  reaching_goal_controller.py  setup.cfg  setup.py  sim_utils.py
agimus_controller_ros/agimus_controller_ros/: agimus_controller.py  agimus_controller_parameters.py  agimus_controller_parameters.yaml  mpc_input_dummy_publisher.py  mpc_ros_node.py  parameters.py  ros_utils.py  sim_utils.py  simple_trajectory_publisher.py  test_buffer_node.py
agimus_controller_ros/launch/: agimus_controller.launch.py
agimus_controller_ros/node/: agimus_controller_node
config/: mpc_params.yaml  param.yaml
deprecated/: CHANGELOG.md  CMakeLists.txt  README.md  requirements.txt  setup.py
deprecated/agimus_controller/ocps/: ocp_croco_hpp.py  ocp_pose_ref.py
deprecated/agimus_controller/robot_model/: ur3_model.py
deprecated/agimus_controller/utils/: path_finder.py
deprecated/agimus_controller/visualization/: plots.py  wrapper_meshcat.py
deprecated/agimus_controller_ros/: hpp_agimus_controller.py  parameters.py  ros_np_multiarray.py
deprecated/launch/: agimus_controller.launch  hpp_agimus_controller.launch  reaching_goal_controller.launch
deprecated/node/: agimus_controller_node  hpp_agimus_controller_node  hpp_corbaserver  subscriber_demo
deprecated/test/resources/: col_env.yaml  model.out  param.yaml
deprecated/test/ros/: subscribers.launch.test
launch/: agimus_controller.launch  hpp_agimus_controller.launch  hpp_bringup.launch  record_rosbag.launch
node/: agimus_controller_node  gepetto_gui  hpp_agimus_controller_node  hpp_corbaserver  reaching_goal_controller_node  subscriber_demo
robot_description/urdf/obstacles/: big_box.urdf  wall.urdf
src/: run.py
srdf/: demo.srdf
test/: CMakeLists.txt  build_models.py  subscribers.launch.test  subscribers.py  test_build_model.py  test_hpp_interface.py  test_run_mains.py  test_scenes.py  test_servers.py
test/resources/: col_env.yaml
test/resources/urdf/: agimus_controller_panda.urdf  panda_from_xacro.urdf
(+6 files in other folders)
