<?xml version="1.0"?>
<package format="3">
  <name>agimus_controller</name>
  <version>0.0.0</version>
  <description>The agimus_controller package</description>

  <maintainer email="gsaurel@laas.fr">Guilhem Saurel</maintainer>
  <author email="maximilien.naveau@toward.fr">Maximilien Naveau</author>

  <license>BSD-3-clause</license>
  <url type="website">https://github.com/agimus-project/agimus_controller</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>jrl-cmakemodules</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <!-- ROS dependencies. -->
  <depend>linear_feedback_controller_msgs</depend>
  <depend>rospy</depend>
  <depend>xacro</depend>

  <!-- Python dpendencies. -->
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- LAAS dependencies. -->
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>crocoddyl</exec_depend>
  <exec_depend>example-robot-data</exec_depend>

  <!-- MiM dependencies. -->
  <exec_depend>mim_solvers</exec_depend>
  <exec_depend>mim_robots</exec_depend>

  <!-- HPP dependencies. -->
  <exec_depend>hpp-corbaserver</exec_depend>
  <exec_depend>hpp-manipulation-corba</exec_depend>

  <!-- Visualization dependencies -->
  <exec_depend>meshcat</exec_depend>

  <!-- Tests -->
  <build_depend>rostest</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
